<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#36000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:fontFamily="sans-serif"
                android:text="@string/loginPageMessageTextView"
                android:textColor="@color/white"
                android:textSize="44sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginPageEmailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/login_page_input_bg"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/loginPageEmailHint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/loginPagePasswordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_page_input_bg"
                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/loginPagePasswordHint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/loginPageEmailInput"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/loginPageEmailInput"
                app:layout_constraintTop_toBottomOf="@+id/loginPageEmailInput" />

            <TextView
                android:id="@+id/loginPageForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loginPageForgot_password"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/loginPagePasswordInput"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/loginPagePasswordInput"
                app:layout_constraintTop_toBottomOf="@+id/loginPagePasswordInput" />

            <Button
                android:id="@+id/loginPageLoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_page_input_bg"
                android:text="@string/loginPageLoginButton"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/loginPageForgotPassword"
                app:layout_constraintStart_toStartOf="@+id/loginPagePasswordInput"
                app:layout_constraintTop_toBottomOf="@+id/loginPageForgotPassword" />

            <Button
                android:id="@+id/loginPageSignupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/login_page_input_bg"
                android:text="@string/loginPageSignupButton"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/loginPageLoginButton"
                app:layout_constraintStart_toStartOf="@+id/loginPageLoginButton"
                app:layout_constraintTop_toBottomOf="@+id/loginPageLoginButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</RelativeLayout>